cmake_minimum_required(VERSION 3.27)

# 进入三方库文件夹
add_subdirectory(MiniCircle)

# 进入执行文件文件夹
add_subdirectory(app0)
add_subdirectory(CmakeAsync)
add_subdirectory(CmakeCoroutine)
add_subdirectory(CmakeDemo)
add_subdirectory(CmakeEventBus)
add_subdirectory(CmakeGraph)
add_subdirectory(CmakeKalman)
add_subdirectory(CmakeProducer_Consumer)
add_subdirectory(CmakePublish-Subscribe)
add_subdirectory(CmakeSocket)
add_subdirectory(CMakeThreadPool)
